08/01
	* Some minor item fixes [Playtester]
07/31
	* Fixed NPC_STOP id value in skill_cast_db, merged skill_cast_db as well.
07/30
	* Corrected the defense of puppy band [MasterOfMuppets]
	* Merged mob_db [Playtester]
	- adjusted some drop rates and removed Yoyo's Animal Skin drop
	- fixed element of Abyss Lake monsters
07/29
	* Merged item_db, mob_db, mob_skill_db and skill_require_db [Playtester]
	- fixed Teddy Bear Card, Solace Card and some other items
	- added most of the missing X.4 / 11.1 drops
	- adjusted the drop rates of Odin Temple and Kiel's Mechanical Doll Factory
	- removed beret drop
	- fixed Grandcross when used by mobs
	- shockwave, flasher and freezing trap now consume 2 traps like claymore trap
07/25
	* Merged exp, exp2, item_db, item_misc, mob_db, mob_race2_db, mob_skill_db, produce_db [Playtester]
	- fixed some problems with exp.txt and exp2.txt
	- fixed some items and added the new ones
	- added Holy Quiver to the Quiver Group
	- adjusted drop rate of cooking items so it's close to official
	- added Beret drop to Turtle General
	- added boss mode to Bio Lab 3 G_mobs and fixed G_Kraben
	- Kiel/Valkyrie drop rate adjustment
	- added G_mobs to the Race2 groups
07/21
	* Merged item_db and mob_db again [Playtester]
	- replace race numbers with constants
	- adjusted the item drop bonuses of the new items
	- fixed Lord of Death card's status change chances
	- official Speed/Delays for: Louyang, Ayothaya, Einbech, Lighthalzen, Juperos
	  (this completes the delay update)
	- fixed Christmas Orc's drops
	* Merged item_db, mob_db and mob_skill_db [Playtester]
	- fixed Anonymity Request and Erende Ebecee Card
	- X.4/11.1 drop updates
	- official Speed/Delays for: Amatsu, Kunlun, Umbala and Niflheim
	- also fixed behavior of some 'problematic delay mobs'
	- made Bacsojin's skills uninteruptable
07/20
	* Changed the sell price of Serin's ring to 22500 [MasterOfMuppets]
	* Merged the new item_trade.txt updates from trunk [MasterOfMuppets]
07/19