@@ -200,7 +200,7 @@
 //-- BS_REPAIRWEAPON
 108,7500,0,0,0,0
 //-- BS_HAMMERFALL
-110,0,0,0,0,3000
+110,0,0,0,0,5000
 //-- BS_ADRENALINE
 111,0,0,0,30000:60000:90000:120000:150000,0
 //-- BS_WEAPONPEFECT
@@ -502,7 +502,7 @@
 //-- DC_UGLYDANCE
 325,0,0,0,30000,3000
 //-- DC_SCREAM
-326,0,3000,0,0,3000
+326,0,3000,0,0,5000
 //-- DC_HUMMING
 327,0,0,0,60000,20000
 //-- DC_DONTFORGETME
